--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "chart.js": "^3.2.1",
     "i": "^0.3.6",
+    "lodash": "^4.17.21",
     "mdb-ui-kit": "^3.6.0",
     "npm": "^7.14.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
