--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "chart.js": "^3.2.1",
+    "date-and-time": "^1.0.0",
     "i": "^0.3.6",
     "lodash": "^4.17.21",
     "mdb-ui-kit": "^3.6.0",
