--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "react-chartjs-2": "^3.0.3",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.6.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
